--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
   <button id="easter-egg-btn">🏀</button>
   <div id="lebron-panel">
-    <img src="i.png" alt="LeBron James flexing in Lakers jersey"/>
+    <img src="images/i.png" alt="LeBron James flexing in Lakers jersey"/>
     <p>LEBRONNN LAKERS IN 5!!!</p>
   </div>
 
