--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <p> Hey, I'm Tanishq — a second-year Computer Science student at UNSW. I'm 19 years old and originally from Singapore. 
           At night time, you'll probably find me in my room with friends, blasting music (Playboi Carti, CAS, Young Thug, The Marías) or watching movies or anime, depending on the mood.(The Godfather, Lord of the Rings, JoJo's Bizarre Adventure, and One Piece)
           Otherwise, I'm likely out in the city with my mates, usually at a bar.
-          I used to hate beer, but thanks to a bit of influence (and a few good nights), I've grown to love it — especially Hahn SuperDry 🍻 
+          I used to hate going out, but thanks to a bit of influence (and a few good nights), I've grown to love it 
           BTW- have you tried clicking the basketball emoji 🏀 below? But yea, that's about it. Press the HOME to go backkkk
         </p>
       </div>
