added frindly photos

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       </div>
       <div class="img-column">
         <div class="img-box">
-          <img src="images/zrr.jpg" alt="photo 3">
+          <img src="images/hello.jpg" alt="photo 3">
         </div>
         <div class="img-box">
           <img src="images/madsnme.jpg" alt="photo 4">
